<resources>
    <string name="app_name">colormyviews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>

    <string name="button_green">Green</string>
    <string name="button_trf">Red</string>
    <string name="button_yellow">Yellow</string>
    <string name="green_button">Green</string>
    <string name="orange_button">Orange</string>
    <string name="reset_button">Reset</string>


</resources>